# am_traj_extension

./: README.md
Notes/: Constrained BVP Test.md  Constrained BVP.md  OBVP-SOLVER.md  OBVP.md  Polynomial Trajectory Closed-form Optimization.md  Sample-based Motion Planning Algorithm.md  am_traj.md
back/plan_manage/: CMakeLists.txt  package.xml
back/plan_manage/Apps/: planner_test.cpp
back/plan_manage/config/: test.rviz
back/plan_manage/include/: scope_timer.hpp  visualization_utils.hpp
back/plan_manage/include/plan_manage/: se3_planner.h
back/plan_manage/include/se3gcopter/: geoutils.hpp  lbfgs.hpp  se3gcopter(复件).hpp  se3gcopter.hpp
back/plan_manage/launch/: default.rviz  map_se3.rviz  sim_cross_gap.launch  simuav.launch  simulator.xml  test_env.launch
back/plan_manage/misc/: map_se3.rviz  realflight.yaml  realflight_dji.yaml  se3_planner_params.yaml
back/plan_manage/src/: se3_node.cpp  se3_planner.cpp
back/qnmopt/: geoutils.hpp  qnmopt.hpp  sdlp.hpp  sfc_gen.hpp
matlab/: reachable_set.m
matlab/am_traj/: GetMatrixC.m  GetMatrixM.m  GetMatrixQ.m  am_traj.mlx  best_cost_test.m  varify_matrix.mlx
matlab/minimum_snap/: OBVP推导.md  fix_pv.mlx  fix_pva.mlx  full_fix.mlx  fw_search.mlx  min_snap_piece.mlx  minimum_snap.mlx  minimum_snap_piece.m  only_fix_p.mlx  validate_best_cost.m
poly_traj_utils/: CMakeLists.txt  package.xml
poly_traj_utils/Apps/: bvp_solver_test.cpp  minco_test.cpp  opt_utils_test.cpp  poly_utils_test.cpp
poly_traj_utils/config/: minco_test.rviz  simple.rviz  traj_opt.yaml
poly_traj_utils/include/poly_traj_utils/: msg_utils.h  obvp_solver.hpp  obvp_solver2.hpp  obvp_solver_nnn.hpp  poly_data_structure.hpp  poly_visual_utils.hpp  scope_timer.hpp  traj_utils.hpp  visualization_tempelete.hpp  visualization_utils.hpp
poly_traj_utils/include/poly_traj_utils/am/: am_traj.hpp
poly_traj_utils/include/poly_traj_utils/bvp/: obvp_solver.hpp
poly_traj_utils/include/poly_traj_utils/minco/minjerk/: geoutils.hpp  lbfgs.hpp  minco_jerk.hpp  minco_jerk_back.hpp
poly_traj_utils/include/poly_traj_utils/minco/minsnap/: geoutils.hpp  lbfgs.hpp  minco_snap.hpp
poly_traj_utils/launch/: test_env.launch
poly_traj_utils/rviz/: bvp.rviz
poly_traj_utils/src/: poly_traj_utils.cpp
